@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2024 Obeo.
+ * Copyright (c) 2024, 2025 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -35,10 +35,10 @@ public class GVDescriptionNameGenerator extends DescriptionNameGenerator {
         String name = super.getCreationToolName(eReference);
         if (SysmlPackage.eINSTANCE.getRequirementUsage_AssumedConstraint().equals(eReference)
                 || SysmlPackage.eINSTANCE.getRequirementDefinition_AssumedConstraint().equals(eReference)) {
-            name = "New Assumed constraint";
+            name = "New Assume constraint";
         } else if (SysmlPackage.eINSTANCE.getRequirementUsage_RequiredConstraint().equals(eReference)
                 || SysmlPackage.eINSTANCE.getRequirementDefinition_RequiredConstraint().equals(eReference)) {
-            name = "New Required constraint";
+            name = "New Require constraint";
         }
         return name;
     }
